--- a/Assignment3/Sequence_Classification.ipynb
+++ b/Assignment3/Sequence_Classification.ipynb
@@ -6,7 +6,6 @@
       "name": "Sequence Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIW7Q2njxQjUPdvb7GoCep",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -373,6 +372,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/KumudaBG/CMPE-297-Special-Topics-Assignments/blob/main/Assignment3/Sequence_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EhEpHQ1zk5bQ"
+      },
+      "source": [
+        "Reference: https://huggingface.co/transformers/custom_datasets.html?highlight=imdb#seq-imdb"
       ]
     },
     {
